feat:两数之和，最长回文字符串

--- a/最长回文子串.html
+++ b/最长回文子串.html
@@ -12,6 +12,7 @@
    * @return {string}
    */
   var longestPalindrome = function(s) {
+    if (!s.length) return s
     const palindromeArr = []
     for (let i = 0; i < s.length; i++) {
       let j = 0
