--- a/1-两数之和.html
+++ b/1-两数之和.html
@@ -25,17 +25,18 @@
  * @param {number} target
  * @return {number[]}
  */
-// var twoSum = function(nums, target) {
-//   for (let i = 0; i < nums.length; i++) {
-//     const arr = nums.slice()
-//     arr.splice(i, 1)
-//     const index = arr.indexOf(target - nums[i])
-//     if (index > -1) {
-//       console.log([i, index])
-//       return [i, index < i ? index : index + 1]
-//     }
-//   }
-// };
+var twoSum = function(nums, target) {
+  for (let i = 0; i < nums.length; i++) {
+    const arr = nums.slice()
+    arr.splice(i, 1)
+    const index = arr.indexOf(target - nums[i])
+    if (index > -1) {
+      console.log([i, index])
+      return [i, index < i ? index : index + 1]
+    }
+  }
+};
+
 
 // 法二：时间复杂度O(n)
 var twoSum = function(nums, target) {
