--- a/35-搜索插入位置.html
+++ b/35-搜索插入位置.html
@@ -68,7 +68,23 @@
     return nums.length
   };
 
-  console.log(searchInsert2([1, 3], 3));
+
+  // 法三：
+  /**
+   * @param {number[]} nums
+   * @param {number} target
+   * @return {number}
+   */
+  var searchInsert3 = function(nums, target) {
+    let j = 0
+    for (let i = 0; i < nums.length; i++) {
+      if (nums[i] < target) j++
+      else break
+    }
+    return j
+  };
+
+  console.log(searchInsert3([1, 2, 3, 6, 7, 9], 11));
 </script>
 </body>
 </html>
