排序算法大全

--- a/排序算法总结/a-冒泡排序.html
+++ b/排序算法总结/a-冒泡排序.html
@@ -20,10 +20,11 @@
   }
 
   // test bubbleSort fn
-  const arr = generateArr(1000)
-  console.time('bubbleSort')
+  const arr = generateArr(100)
+  console.log(arr, 1036)
+  console.time()
   const list = bubbleSort(arr)
-  console.timeEnd('bubbleSort')
+  console.timeEnd()
   console.log(list, 333)
 </script>
 </body>
