feat："新增快速排序和希尔排序"

--- a/排序算法总结/a-冒泡排序.html
+++ b/排序算法总结/a-冒泡排序.html
@@ -20,11 +20,10 @@
   }
 
   // test bubbleSort fn
-  const arr = generateArr(100)
-  console.log(arr, 1036)
-  console.time()
+  const arr = generateArr(1000)
+  console.time('bubbleSort')
   const list = bubbleSort(arr)
-  console.timeEnd()
+  console.timeEnd('bubbleSort')
   console.log(list, 333)
 </script>
 </body>
