--- a/排序算法总结/e-快速排序.html
+++ b/排序算法总结/e-快速排序.html
@@ -3,8 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>快速排序</title>
+  <script src="generateArr.js"></script>
 </head>
 <body>
 
+<script>
+  function quickSort(arr) {
+    if (!arr.length) return []
+    const left = []
+    const right = []
+    const mid = arr[0]
+    for (let i = 1; i < arr.length; i++) {
+      if (arr[i] < mid) {
+        left.push(arr[i])
+      } else {
+        right.push(arr[i])
+      }
+    }
+    return quickSort(left).concat(mid, quickSort(right))
+  }
+
+  const testArr = generateArr(1000)
+  console.time('quickSort')
+  const list = quickSort(testArr)
+  console.timeEnd('quickSort')
+  console.log(list)
+
+</script>
 </body>
 </html>
