--- a/动态规划/70-爬楼梯.html
+++ b/动态规划/70-爬楼梯.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>leetcode--爬楼梯</title>
+  <title>70-爬楼梯</title>
 </head>
 <body>
 
@@ -23,6 +23,22 @@
     }
     return a
   };
+
+  // 解法二：动态规划
+  /**
+   * @param {number} n
+   * @return {number}
+   */
+  var climbStairs = function(n) {
+    if (n <= 2) return n
+    const dp = []
+    dp[1] = 1
+    dp[2] = 2
+    for (let i = 3; i <= n; i++) {
+      dp[i] = dp[i - 1] + dp[i - 2]
+    }
+    return dp[n]
+  }
 </script>
 </body>
 </html>
