--- a/动态规划/123-买卖股票的最佳时机 III.html
+++ b/动态规划/123-买卖股票的最佳时机 III.html
@@ -45,6 +45,7 @@
   //   0 <=prices[i] <=100000
 
 
+  // 解法一：动态规划
   /**
    * @param {number[]} prices
    * @return {number}
@@ -52,30 +53,23 @@
   var maxProfit = function(prices) {
     const len = prices.length
     if (len < 2) return 0
-    const dp = []
-    for (let i = 0; i < len; i++) {
-      dp[i] = Array(2)
-    }
-    // 状态定义：
-    // dp[i][j]：下标为 i 这一天结束的时候，手上持股状态为 j 时，我们持有的现金数。
-    //
-    // j = 0，表示当前不持股；
-    // j = 1，表示当前持股。
-    let haveSoldIndex = 0
-    let totalMoney = dp[0][0] = 0
-    dp[0][1] = -prices[0]
+    // buy1代表第一次买入股票，手中所剩的钱数
+    // sell1代表第一次卖出股票，手中所剩的钱数
+    // buy2代表第二次买入股票，手中所剩的钱数
+    // sell2代表第二次卖出股票，手中所剩的钱数
+
+    let buy1 = -prices[0], sell1 = 0, buy2 = -prices[0], sell2 = 0
     for (let i = 1; i < len; i++) {
-      debugger
-      if (haveSoldIndex >= 2) return totalMoney
-      dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] + prices[i])
-      dp[i][1] = Math.max(dp[i-1][1], (!haveSoldIndex ? dp[i - 1][0]: totalMoney) - prices[i])
-      if (dp[i][0] !== totalMoney) {
-        haveSoldIndex++
-        totalMoney = dp[i][0]
-      }
+      // buy1第一次买入股票的钱数，要和假如前面某一天已经买入后所剩的钱数以及今天准备买入后手中所剩的钱数对比，取其最大值（手中所剩的钱数越大，则表示用于买入股票的钱数越少，即买入价格越低）
+      buy1 = Math.max(buy1, -prices[i])
+      // sell1第一次卖出后所剩的钱数，要和假如前面某一天已经卖出后所剩的钱数以及今天准备卖出后手中所剩钱数对比，取其最大值（手中所剩的钱数越大，则表示当天卖出股票后挣的钱越多，即卖出价格越高）
+      sell1 = Math.max(sell1, buy1 + prices[i])
+      // buy2第二次买入股票的钱数，要和假如前面某一天已经买入后所剩的钱数以及今天准备买入后手中所剩的钱数（今天准备买入的钱数 = 上次卖出后所剩的钱数即sell1 - 今天的价格prices[i]）对比，取其最大值（手中所剩的钱数越大，则表示卖出股票的价格越高）
+      buy2 = Math.max(buy2, sell1 - prices[i])
+      // sell2第二次卖出股票的钱数，要和假如前面某一天已经卖出后所剩的钱数以及今天准备卖出后手中所剩的钱数（今天准备卖出的钱数 = 上次买入后所剩的钱数即buy2 + 今天的价格prices[i]）对比，取其最大值（手中所剩的钱数越大，则表示卖出股票的价格越高）
+      sell2 = Math.max(sell2, buy2 + prices[i])
     }
-    // 最后一天不可以持股，必须卖出
-    return totalMoney
+    return sell2
   }
 
   maxProfit([3,3,5,0,0,3,1,4])
