--- a/动态规划/300-最长递增子序列.html
+++ b/动态规划/300-最长递增子序列.html
@@ -108,6 +108,7 @@
         }
       }
     }
+    console.log(dp)
     return Math.max(...dp)
   }
 
@@ -116,7 +117,7 @@
    * @param {number[]} nums
    * @return {number}
    */
-  var lengthOfLIS = function (nums) {
+  var lengthOfLIS2 = function (nums) {
     const len = nums.length
     if (len < 2) return len
     const d = [0, nums[0]]
