--- a/排序算法总结/e-快速排序.html
+++ b/排序算法总结/e-快速排序.html
@@ -6,5 +6,24 @@
 </head>
 <body>
 
+<script>
+  function quickSort(list) {
+    const rec = arr => {
+      if (!arr.length) return []
+      const left = []
+      const right = []
+      const mid = arr[0]
+      for (let i = 1; i < arr.length; i++) {
+        if (arr[i] < mid) {
+          left.push(arr[i])
+        } else right.push(arr[i])
+      }
+      return [...rec(left), mid, ...rec(right)]
+    }
+    return rec(list)
+  }
+
+  console.log(quickSort([2, 6, 5, 9]));
+</script>
 </body>
 </html>
