--- a/字典Map/677. 键值映射.html
+++ b/字典Map/677. 键值映射.html
@@ -50,7 +50,7 @@
     for (let key in this.obj) {
       debugger
       if (this.obj.hasOwnProperty(key)) {
-        if (key.indexOf(prefix) === 0) {
+        if (key.startsWith(prefix)) {
           sum += this.obj[key]
         }
       }
