--- a/指针/53. 最大子序和.html
+++ b/指针/53. 最大子序和.html
@@ -59,6 +59,9 @@
   };
 
   // 解法二：动态规划
+  // dp[i]代表以索引i为结尾的最长连续子数组的最大和
+  // 要想计算dp[i]，则需要考虑dp[i-1]的情况，如果dp[i-1] > 0，则dp[i] = dp[i-1]+nums[i]
+  // 如果dp[i-1] < 0，由于是负数，则不需要加上，故此时dp[i] = nums[i]
   /**
    * @param {number[]} nums
    * @return {number}
@@ -72,6 +75,79 @@
       } else dp[i] = nums[i]
     }
     return Math.max(...dp)
+  }
+
+  // 解法三：迭代法（在动态规划的基础上降低空间复杂度）
+  /**
+   * @param {number[]} nums
+   * @return {number}
+   */
+  var maxSubArray = function(nums) {
+    if (!nums.length) return 0
+    let dp0 = nums[0]
+    let res = dp0
+    for (let i = 1; i < nums.length; i++) {
+      if (dp0 > 0) {
+        dp0 += nums[i]
+      } else dp0 = nums[i]
+      res = Math.max(res, dp0)
+    }
+    return res
+  }
+
+  // 解法四：分治法
+  // 这个分治方法类似于「线段树求解最长公共上升子序列问题」的 pushUp 操作。
+  //   我们定义一个操作 get(a, l, r) 表示查询 aa 序列 [l,r][l,r] 区间内的最大子段和，那么最终我们要求的答案就是 get(nums, 0, nums.size() - 1)。如何分治实现这个操作呢？对于一个区间 [l,r][l,r]，我们取 m = Math.floor(l + r)/2, 对区间 [l,m][l,m] 和 [m+1,r][m+1,r] 分治求解。当递归逐层深入直到区间长度缩小为 1 的时候，递归「开始回升」。这个时候我们考虑如何通过 [l,m] 区间的信息和 [m+1,r] 区间的信息合并成区间 [l,r] 的信息。最关键的两个问题是：
+
+  // 我们要维护区间的哪些信息呢？
+  // 我们如何合并这些信息呢？
+  // 对于一个区间 [l,r][l,r]，我们可以维护四个量：
+
+  // lSum 表示 [l,r] 内以 l 为左端点的最大子段和；
+  // rSum 表示 [l,r] 内以 r 为右端点的最大子段和；
+  // mSum 表示 [l,r] 内的最大子段和；
+  // iSum 表示 [l,r] 的区间和；
+  // 由此我们可以得知，lSum >= iSum, rSum >= iSum, mSum >= iSum，总之这四个变量中iSum最小（很重要）
+
+  // 对于长度为 1 的区间 [i, i][i,i]，四个量的值都和 nums[i] 相等。
+  // 对于长度大于 1 的区间：
+
+  // 首先最好维护的是 iSum，区间 [l,r] 的 iSum 就等于「左子区间」的 iSum 加上「右子区间」的 iSum。
+  // 对于 [l,r] 的 lSum，存在两种可能，它要么等于「左子区间」的 lSum，要么等于「左子区间」的 iSum 加上「右子区间」的 lSum，二者取大。
+  // 对于 [l,r] 的 rSum，同理，它要么等于「右子区间」的 rSum，要么等于「右子区间」的 iSum 加上「左子区间」的 rSum，二者取大。
+  // 当计算好上面的三个量之后，就很好计算 [l,r] 的 mSum 了。我们可以考虑 [l,r] 的 mSum 对应的区间是否跨越 m——它可能不跨越 m，也就是说 [l,r] 的 mSum 可能是「左子区间」的 mSum 和 「右子区间」的 mSum 中的一个；它也可能跨越 m，可能是「左子区间」的 rSum 和 「右子区间」的 lSum 求和。三者取最大。
+  // 这样问题就得到了解决。
+
+  // 时间复杂度为 O(n),空间复杂度为 O(logn)
+  /**
+   * @param {number[]} nums
+   * @return {number}
+   */
+  var maxSubArray = function(nums) {
+    function Status (l, r, m , i) {
+      this.lSum = l
+      this.rSum = r
+      this.mSum = m
+      this.iSum = i
+    }
+    function pushUp(lObj, rObj) {
+      let lSum = Math.max(lObj.lSum, lObj.iSum + rObj.lSum)
+      let rSum = Math.max(rObj.rSum, rObj.iSum + lObj.rSum)
+      let mSum = Math.max(lObj.mSum, rObj.mSum, lObj.rSum + rObj.lSum)
+      let iSum = lObj.iSum + rObj.iSum
+      return new Status(lSum, rSum, mSum, iSum)
+    }
+    function divide (arr, l, r) {
+      if (l === r) {
+        return new Status(arr[l], arr[l], arr[l], arr[l])
+      }
+      const mid = (l + r) / 2 | 0
+      const lObj = divide(arr, l , mid)
+      const rObj = divide(arr, mid + 1 , r)
+      return pushUp(lObj, rObj)
+    }
+
+    return divide(nums, 0, nums.length - 1).mSum
   }
 
   console.log(maxSubArray([-1, 1, 2, 1]));
