--- a/位运算/231-2的幂.html
+++ b/位运算/231-2的幂.html
@@ -7,8 +7,39 @@
   <title>Document</title>
 </head>
 <body>
-  
+
   <script>
+    // 给你一个整数 n，请你判断该整数是否是 2 的幂次方。如果是，返回 true ；否则，返回 false 。
+    // 如果存在一个整数 x 使得n == 2x ，则认为 n 是 2 的幂次方。
+    //
+    // 示例 1：
+    // 输入：n = 1
+    // 输出：true
+    // 解释：20 = 1
+    //
+    // 示例 2：
+    // 输入：n = 16
+    // 输出：true
+    // 解释：24 = 16
+    //
+    // 示例 3：
+    // 输入：n = 3
+    // 输出：false
+    //
+    // 示例 4：
+    // 输入：n = 4
+    // 输出：true
+    //
+    // 示例 5：
+    // 输入：n = 5
+    // 输出：false
+    //
+    // 提示：
+    // -231 <= n <= 231 - 1
+    //
+    // 进阶：你能够不使用循环/递归解决此问题吗?
+
+    // 法一：循环
     /**
     * @param {number} n
     * @return {boolean}
@@ -27,13 +58,56 @@
       return false
     };
 
+    // 法二：（进阶）不循环也不递归
+    /**
+     * @param {number} n
+     * @return {boolean}
+     */
+    var isPowerOfTwo = function(n) {
+      const len = n.toString(2).length - 1
+      return 2 ** len === n
+    }
+
+    // 法三：（进阶）不循环也不递归
+    /**
+     * @param {number} n
+     * @return {boolean}
+     */
+    var isPowerOfTwo = function(n) {
+      if (n === 1) return true
+      // 如果是2的次幂，则除了最左边的为1外，其他均为0
+      const str = n.toString(2).slice(1)
+      return parseInt(str) === 0
+    }
+
+    // 法四：（进阶）如果n为2的次幂，则n & (n - 1) = 0，比如8的二进制是1000，7的二进制是111
+    /**
+     * @param {number} n
+     * @return {boolean}
+     */
+    var isPowerOfTwo = function(n) {
+      if (n === 1) return true
+      return n > 0 && (n & (n - 1)) === 0
+    }
+
+    // 法五：（进阶）如果n为2的次幂，则n & -n = n，比如8的二进制是1000，7的二进制是111
+    /**
+     * @param {number} n
+     * @return {boolean}
+     */
+    var isPowerOfTwo = function(n) {
+      if (n === 1) return true
+      return n > 0 && (n & -n) === n
+    }
+
     console.log(isPowerOfTwo(12));
     console.log(isPowerOfTwo(24));
     console.log(isPowerOfTwo(4));
     console.log(isPowerOfTwo(32));
     console.log(isPowerOfTwo(4294967296));
-    
-  
+
+
+
   </script>
 </body>
 </html>
