--- a/位运算/136-只出现一次的数字.html
+++ b/位运算/136-只出现一次的数字.html
@@ -7,8 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  
+
   <script>
+    // 法一：常规解法
     /**
     * @param {number[]} nums
     * @return {number}
@@ -27,6 +28,26 @@
       }
       return nums[0]
     };
+
+    // 法二：位运算（异或）降低空间复杂度为O(1)
+    /**
+     * @param {number[]} nums
+     * @return {number}
+     */
+    // 对于这道题，可使用异或运算 。异或运算有以下几个运算性质：
+    // 1. 归零律：a ^ a = 0;
+    // 2. 恒等律：a ^ 0 = a;
+    // 3. 交换律：a ^ b = b ^ a;
+    // 4. 结合律：a ^ b ^ c = (a ^ b) ^ c = a ^ (b ^ c);
+    // 5. 自反：a ^ b ^ a = b
+
+    var singleNumber = function(nums) {
+      let res = 0
+      for (let i = 0; i < nums.length; i++) {
+        res ^= nums[i]
+      }
+      return res
+    }
 
     const num = singleNumber([4,4,3,3,6,6,5])
     console.log('num', num)
