--- a/动态规划/121-买卖股票的最佳时机.html
+++ b/动态规划/121-买卖股票的最佳时机.html
@@ -107,7 +107,51 @@
     return dp[len - 1][0];
   }
 
-  maxProfit([7,1,5,3,6,4])
+  // 解法四：遍历一次分别找出最大值和最小值并记录下他们的索引(错误解法：只是一种思路，可惜错了)
+  /**
+   * @param {number[]} prices
+   * @return {number}
+   */
+  var maxProfit = function(prices) {
+    let min = prices[0]
+    let minIndex = 0
+    for (let i = 1; i < prices.length; i++) {
+      if (prices[i] < min) {
+        min = prices[i]
+        minIndex = i
+      }
+    }
+    let max = min
+    for (let i = minIndex; i < prices.length; i++) {
+      if (prices[i] > max) {
+        max = prices[i]
+      }
+    }
+    console.log(max, min, minIndex)
+    return max - min
+  };
+
+  // 解法五：动态规划
+  /**
+   * @param {number[]} prices
+   * @return {number}
+   */
+  var maxProfit = function(prices) {
+    let profit = 0
+    const dp = []
+    dp[0] = -prices[0]
+    // dp[i]代表第i天已经买入（请注意，不一定是在当天买入的）时手中所剩的钱的最大值
+    for (let i = 1; i < prices.length; i++) {
+      dp[i] = -prices[i]
+      dp[i] = Math.max(dp[i], dp[i - 1])
+      if (dp[i - 1] + prices[i] > profit) {
+        profit = dp[i - 1] + prices[i]
+      }
+    }
+    return profit
+  }
+
+  console.log(maxProfit([7, 1, 5, 3, 6, 4]));
 </script>
 </body>
 </html>
