feat：多重背包问题

--- a/动态规划/背包问题/index.html
+++ b/动态规划/背包问题/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>背包问题大全</title>
 </head>
 <body>
 
 <script src="0-1背包问题.js"></script>
 <script src="完全背包问题.js"></script>
+<script src="多重背包.js"></script>
 </body>
 </html>
