feat：232. 用栈实现队列

--- a/栈/20-有效的括号.html
+++ b/栈/20-有效的括号.html
@@ -32,8 +32,54 @@
       return list.length === 0
     };
 
-    console.log(isValid(']'), 66);
-    
+    // 解法二：栈
+    /**
+     * @param {string} s
+     * @return {boolean}
+     */
+    var isValid = function (s) {
+      const stack = []
+      for(let i = 0;i < s.length;i++) {
+        const char = s.charAt(i)
+        let char2 = ''
+        if(char === '(' || char === '[' || char === '{') stack.push(char)
+        else {
+          char2 = stack.pop()
+          if (char === ')' && char2 === '(' || char === ']' && char2 === '[' || char === '}' && char2 === '{') {
+            continue
+          } else return false
+        }
+      }
+      return stack.length === 0
+    }
+
+    // 解法三：字典Map + 栈
+    /**
+     * @param {string} s
+     * @return {boolean}
+     */
+    var isValid = function (s) {
+      const map = new Map
+      map.set('(', ')')
+      map.set('[', ']')
+      map.set('{', '}')
+      const stack = []
+      for(let i = 0;i < s.length;i++) {
+        const char = s.charAt(i)
+        let char2 = ''
+        if(map.has(char)) stack.push(char)
+        else {
+          char2 = stack.pop()
+          if (map.get(char2) === char) {
+            continue
+          } else return false
+        }
+      }
+      return stack.length === 0
+    }
+
+    console.log(isValid('([)]'), 66);
+
 
   </script>
 </body>
