--- a/53-最大子序和.html
+++ b/53-最大子序和.html
@@ -17,11 +17,34 @@
       let currentSum = nums[0]
       for (let i = 0; i < nums.length; i++) {
         currentSum = currentSum < 0 ? nums[i] : nums[i] + currentSum
-        sum = Math.max(currentSum. sum)
+        sum = Math.max(currentSum, sum)
       }
       return sum
     }
   };
+
+  /**
+   * @param {number[]} nums
+   * @return {number}
+   */
+  var maxSubArray = function(nums) {
+    const n = nums.length
+    let left = 0, right = 1
+    let sum = nums[0], res = 0
+    while(left <= right && right < n) {
+      debugger
+      sum += nums[right]
+      if(sum - nums[left] >= sum) {
+        sum -= nums[left]
+        left++
+      }
+      res = Math.max(res, sum)
+      right++
+    }
+    return res
+  };
+
+  maxSubArray([-2,1,-3,4,-1,2,1,-5,4])
 </script>
 </body>
 </html>
