feat：剑指 Offer 10- I. 斐波那契数列

--- a/贪心算法/300-最长递增子序列.html
+++ b/贪心算法/300-最长递增子序列.html
@@ -140,10 +140,11 @@
         d[pos + 1] = nums[i]
       }
     }
+    console.log(d, 77)
     return maxLength
   }
 
-  console.log(lengthOfLIS([0,1,0,3,2,3]));
+  console.log(lengthOfLIS2([0,1,0,3,2,3]));
 </script>
 </body>
 </html>
