--- a/动态规划/剑指 Offer 10- I. 斐波那契数列.html
+++ b/动态规划/剑指 Offer 10- I. 斐波那契数列.html
@@ -31,12 +31,13 @@
    * @return {number}
    */
   var fib = function(n) {
+    if (n === 0) return 0
     if (n === 1 || n === 2) {
       return 1
     }
     const dp = [0, 1, 1]
     for (let i = 3; i <= n; i++) {
-      dp[i] = dp[i - 1] + dp[i - 2]
+      dp[i] = (dp[i - 1] + dp[i - 2]) % 1000000007
     }
     return dp[n]
   };
@@ -47,12 +48,13 @@
    * @return {number}
    */
   var fib = function(n) {
+    if (n === 0) return 0
     if (n === 1 || n === 2) {
       return 1
     }
     let dp0 = 1, dp1 = 1
     for (let i = 3; i <= n; i++) {
-      let dp2 = dp0 + dp1
+      let dp2 = (dp0 + dp1) % 1000000007
       dp0 = dp1
       dp1 = dp2
     }
