--- a/数组/4-寻找两个有序数组的中位数.html
+++ b/数组/4-寻找两个有序数组的中位数.html
@@ -26,7 +26,36 @@
       return (nums[len / 2] + nums[len / 2 - 1]) / 2
     };
 
-    console.log(findMedianSortedArrays([1,2,6], [3,7,9]))
+    // 时间复杂度O(m+n)，双指针合并两个正序数组
+    var findMedianSortedArrays = function(nums1, nums2) {
+      let i = 0
+      let j = 0
+      const arr = []
+      while(i < nums1.length && j < nums2.length) {
+        if (nums1[i] > nums2[j]) {
+          arr.push(nums2[j])
+          j++
+        } else {
+          arr.push(nums1[i])
+          i++
+        }
+      }
+      for (;i < nums1.length; i++) {
+        arr.push(nums1[i])
+      }
+      for (;j < nums2.length; j++) {
+        arr.push(nums2[j])
+      }
+      console.log(arr, 78)
+      const index = arr.length / 2
+      console.log(index, 66)
+      return index !== (index | 0) ? arr[index | 0] : arr[index] + arr[index - 1]
+    };
+
+    console.log(findMedianSortedArrays([1,3], [2]))
+    console.log(findMedianSortedArrays([1,3,8], [2,6,7]))
+
+
 
   </script>
 </body>
