--- a/数组/944. 删列造序.html
+++ b/数组/944. 删列造序.html
@@ -110,6 +110,53 @@ var minDeletionSize = function(strs) {
   return num
 };
 
+// 解法二：在一的基础上优化空间复杂度
+var minDeletionSize = function(strs) {
+  const h = strs.length
+  const v = strs[0].length
+  const byteMap = {
+    'a': 1,
+    'b': 2,
+    'c': 3,
+    'd': 4,
+    'e': 5,
+    'f': 6,
+    'g': 7,
+    'h': 8,
+    'i': 9,
+    'j': 10,
+    'k': 11,
+    'l': 12,
+    'm': 13,
+    'n': 14,
+    'o': 15,
+    'p': 16,
+    'q': 17,
+    'r': 18,
+    's': 19,
+    't': 20,
+    'u': 21,
+    'v': 22,
+    'w': 23,
+    'x': 24,
+    'y': 25,
+    'z': 26
+  }
+  let num = 0
+
+  for (let i = 0; i < v; i++) {
+    for (let j = 1; j < h; j++) {
+      const num2 = byteMap[strs[j][i]]
+      const num1 = byteMap[strs[j - 1][i]]
+      if (num2 < num1) {
+        num++
+        break
+      }
+    }
+  }
+  return num
+};
+
 // minDeletionSize(['abc', 'ace', 'gah'])
 minDeletionSize(["rrjk","furt","guzm"])
 
