--- a/链表/83.-删除排序链表中的重复元素.html
+++ b/链表/83.-删除排序链表中的重复元素.html
@@ -62,9 +62,25 @@
     return res
   };
 
+  // 解法二：双指针（快慢指针）
+  var deleteDuplicates = function(head) {
+    if (head === null) return null
+    let p1 = head
+    let p2 = head.next
+    while (p2) {
+      if (p1.val === p2.val) {
+        p1.next = p2.next
+      } else {
+        p1 = p2
+      }
+      p2 = p2.next
+    }
+    return head
+  }
+
   deleteDuplicates({val: 2, next: {
       val: 2, next: {
-        val: 2, next: null
+        val: 3, next: null
       }
     }})
 </script>
