--- a/指针/15-三数之和.html
+++ b/指针/15-三数之和.html
@@ -42,7 +42,7 @@
       if (nums[0] > 0 || nums[len - 1] < 0) return []
       let resArr = []
       for (let i = 0; i < len; i++) {
-        if(i > 0 && nums[i] == nums[i - 1]) continue
+        if(i > 0 && nums[i] === nums[i - 1]) continue
         let start = i + 1
         let end = len - 1
         let res = []
@@ -54,10 +54,10 @@
           } else {
             res = [nums[i], nums[start++], nums[end--]]
             resArr.push(res)
-            while (start < end && nums[start] == nums[start - 1]) {
+            while (start < end && nums[start] === nums[start - 1]) {
               start++
             }
-            while (start < end && nums[end] == nums[end + 1]) {
+            while (start < end && nums[end] === nums[end + 1]) {
               end--
             }
           }
